--- a/MainApplication/Localization/Language.fr-FR.resx
+++ b/MainApplication/Localization/Language.fr-FR.resx
@@ -18,7 +18,7 @@
     <resheader name="writer">
         <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
     </resheader>
-    <data name="Hello" xml:space="preserve">
-        <value>FR</value>
+    <data name="GLOBAL_SELECTED_LANGUAGE" xml:space="preserve">
+        <value>La langue choisie est : fr-FR</value>
     </data>
 </root>
