--- a/MainApplication/Localization/Language.fr-FR.resx
+++ b/MainApplication/Localization/Language.fr-FR.resx
@@ -18,11 +18,23 @@
     <resheader name="writer">
         <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
     </resheader>
+    <data name="GLOBAL_SELECT_LANGUAGE" xml:space="preserve">
+        <value>Selectionnez un Langage (en-US, fr-FR) :</value>
+    </data>
     <data name="GLOBAL_SELECTED_LANGUAGE" xml:space="preserve">
         <value>La langue choisie est : fr-FR</value>
     </data>
     <data name="GLOBAL_NAME" xml:space="preserve">
         <value>Nom</value>
+    </data>
+    <data name="GLOBAL_ASK_SAVE_NAME" xml:space="preserve">
+        <value>Entrer le nom d'une Sauvegarde ou "cancel" pour annuler :</value>
+    </data>
+    <data name="GLOBAL_ASK_SAVE_NAME_OR_ALL" xml:space="preserve">
+        <value>Entrer le nom d'une Sauvegarde ou "all" pour lancer toutes les sauvegardes ou "cancel" pour annuler :</value>
+    </data>
+    <data name="GLOBAL_SAVE_NAME_NOT_EXIST" xml:space="preserve">
+        <value>Aucune sauvegarde n'existe avec ce nom !</value>
     </data>
     <data name="GLOBAL_SELECT_CHOICE" xml:space="preserve">
         <value>Votre choix :</value>
@@ -74,33 +86,36 @@
     </data>
 
     <data name="CREATE_SAVE_ASK_NAME" xml:space="preserve">
-        <value>Donner un nom à la sauvegarde :</value>
+        <value>Donner un nom à la sauvegarde ou "cancel" pour annuler :</value>
     </data>
     <data name="CREATE_SAVE_ASK_NAME_RETRY" xml:space="preserve">
-        <value>Une sauvegarde comporte déjà ce nom. Donner un nom à la sauvegarde :</value>
+        <value>Une sauvegarde comporte déjà ce nom.</value>
     </data>
 
     <data name="CREATE_SAVE_ASK_SOURCE_URI" xml:space="preserve">
-        <value>Donner le chemin d'accès à la sauvegarde :</value>
+        <value>Donner le chemin d'accès à la sauvegarde ou "cancel" pour annuler :</value>
     </data>
     <data name="CREATE_SAVE_ASK_SOURCE_URI_RETRY" xml:space="preserve">
-        <value>Le chemin d'accès est incorrect. Donner un chemin d'accès :</value>
+        <value>Le chemin d'accès est incorrect.</value>
     </data>
 
     <data name="CREATE_SAVE_ASK_TARGET_URI" xml:space="preserve">
-        <value>Donner le chemin d'écriture de la sauvegarde :</value>
+        <value>Donner le chemin d'écriture de la sauvegarde ou "cancel" pour annuler :</value>
     </data>
     <data name="CREATE_SAVE_ASK_TARGET_URI_RETRY" xml:space="preserve">
-        <value>Le chemin est incorrect. Donner un chemin d'écriture :</value>
+        <value>Le chemin est incorrect.</value>
     </data>
 
     <data name="CREATE_SAVE_ASK_TYPE" xml:space="preserve">
-        <value>Donner type de sauvegarde ( 1 - Complète | 2 - Differentielle ) :</value>
+        <value>Donner type de sauvegarde ( 1 - Complète | 2 - Differentielle ) ou "cancel" pour annuler :</value>
     </data>
     <data name="CREATE_SAVE_ASK_TYPE_RETRY" xml:space="preserve">
-        <value>Choisissez 1 ou 2 pour les types de sauvegarde ( 1 - Complète | 2 - Differentielle ) :</value>
+        <value>Ce type de sauvegarde n'existe pas.</value>
     </data>
     <data name="GLOBAL_TYPE" xml:space="preserve">
         <value>Type</value>
+    </data>
+    <data name="GLOBAL_ASK_GO_TO_MENU" xml:space="preserve">
+        <value>Écrivez ou appuyez sur entré pour revenir au menu.</value>
     </data>
 </root>
