--- a/MainApplication/Localization/Language.fr-FR.resx
+++ b/MainApplication/Localization/Language.fr-FR.resx
@@ -151,10 +151,10 @@
     <value>Destination</value>
   </data>
   <data name="GLOBAL_WELCOME" xml:space="preserve">
-    <value>Bienvenue dans EasySave !</value>
+    <value>Bienvenue dans EasySave</value>
   </data>
   <data name="CHOICE_DISPLAY" xml:space="preserve">
-    <value>Liste des Actions Possible :</value>
+    <value>Liste des Actions Possibles :</value>
   </data>
   <data name="CHOICE_DESC_SHOW_LIST" xml:space="preserve">
     <value>Afficher la liste des sauvegardes</value>
@@ -186,9 +186,6 @@
   <data name="CREATE_SAVE_ASK_NAME_RETRY" xml:space="preserve">
     <value>Une sauvegarde comporte déjà ce nom.</value>
   </data>
-  <data name="GLOBAL_SAVE_ALREADY_RUN" xml:space="preserve">
-    <value>La Save est déjà lancée !</value>
-  </data>
   <data name="CREATE_SAVE_ASK_SOURCE_URI" xml:space="preserve">
     <value>Donnez le chemin d'accès à la sauvegarde ou "cancel" pour annuler :</value>
   </data>
@@ -208,108 +205,9 @@
     <value>Ce type de sauvegarde n'existe pas.</value>
   </data>
   <data name="GLOBAL_TYPE" xml:space="preserve">
-    <value>Type de Sauvegarde</value>
+    <value>Type</value>
   </data>
   <data name="GLOBAL_ASK_GO_TO_MENU" xml:space="preserve">
     <value>Écrivez ou appuyez sur entrée pour revenir au menu.</value>
-  </data>
-  <data name="GLOBAL_CANNOT_REMOVE_RUNNING_SAVE" xml:space="preserve">
-    <value>Vous ne pouvez pas supprimer une sauvegarde lancée !</value>
-  </data>
-  <data name="GLOBAL_DONE" xml:space="preserve">
-    <value>Fait.</value>
-  </data>
-  <data name="GLOBAL_PERFORMING_SAVE" xml:space="preserve">
-    <value>Sauvegarde en cours...</value>
-  </data>
-  <data name="CREATE_SAVE_REACH_LIMIT" xml:space="preserve">
-    <value>La limite de 5 sauvegardes est dépassée.</value>
-  </data>
-  <data name="BUTTON_CREATE_SAVE" xml:space="preserve">
-    <value>Créer une Sauvegarde</value>
-  </data>
-  <data name="BUTTON_PAUSE_ALL_SAVES" xml:space="preserve">
-    <value>Stopper toutes les Sauvegardes</value>
-  </data>
-  <data name="BUTTON_RESUME_ALL_SAVES" xml:space="preserve">
-    <value>Relancer toutes les Sauvegardes</value>
-  </data>
-  <data name="BUTTON_START_ALL_SAVES" xml:space="preserve">
-    <value>Lancer toutes les Sauvegardes</value>
-  </data>
-  <data name="CREATE_COMPLETE_ALL_INPUTS" xml:space="preserve">
-    <value>Vous devez compléter tous les champs !</value>
-  </data>
-  <data name="CREATE_SAVE_SELECT_SOURCE" xml:space="preserve">
-    <value>Sélectionner la Source</value>
-  </data>
-  <data name="CREATE_SAVE_SELECT_TARGET" xml:space="preserve">
-    <value>Séléctionner la Destination</value>
-  </data>
-  <data name="ERROR_JOB_APPLICATION_RUNNING" xml:space="preserve">
-    <value>Une application métier est lancée, vous devez la stopper pour lancer une sauvegarde</value>
-  </data>
-  <data name="GLOBAL_PROGRESSION" xml:space="preserve">
-    <value>Progression</value>
-  </data>
-  <data name="GLOBAL_SELECT_LANGUAGE_GUI" xml:space="preserve">
-    <value>Selectionnez un Langage !</value>
-  </data>
-  <data name="PAGE_HOME_TITLE" xml:space="preserve">
-    <value>Accueil EasySave</value>
-  </data>
-  <data name="PAGE_NAVIGATION_HOME_TITLE" xml:space="preserve">
-    <value>Page d'Accueil</value>
-  </data>
-  <data name="PAGE_NAVIGATION_SAVES_TITLE" xml:space="preserve">
-    <value>Page des Sauvegardes</value>
-  </data>
-  <data name="PAGE_SAVES_TITLE" xml:space="preserve">
-    <value>Gestionnaire de Sauvegardes</value>
-  </data>
-  <data name="GLOBAL_SELECT_SAVE_FILE_TYPE_GUI" xml:space="preserve">
-    <value>Selectionnez le Type de fichier pour les Sauvegardes !</value>
-  </data>
-  <data name="BUTTON_CREATE_EXTENSION" xml:space="preserve">
-    <value>Ajouter une Extension</value>
-  </data>
-  <data name="BUTTON_CREATE_PRIORITY_FILE" xml:space="preserve">
-    <value>Ajouter un nom de Fichier</value>
-  </data>
-  <data name="EXTENSION_ADD_ASK_NAME_RETRY" xml:space="preserve">
-    <value>Cette extension existe déjà !</value>
-  </data>
-  <data name="GLOBAL_ENCRYPT_EXTENSIONS_GUI" xml:space="preserve">
-    <value>Liste des Extensions qui seront chiffrées</value>
-  </data>
-  <data name="GLOBAL_PRIORITY_FILES_GUI" xml:space="preserve">
-    <value>Liste des fichiers prioritaires</value>
-  </data>
-  <data name="HOME_ADD_EXTENSION" xml:space="preserve">
-    <value>Ajouter une nouvelle Extension</value>
-  </data>
-  <data name="HOME_ADD_PRIORITY_FILE" xml:space="preserve">
-    <value>Ajouter un nouveau fichier</value>
-  </data>
-  <data name="PAGE_LOGS_TITLE" xml:space="preserve">
-    <value>Liste des Logs</value>
-  </data>
-  <data name="PAGE_NAVIGATION_LOGS_TITLE" xml:space="preserve">
-    <value>Liste des Logs</value>
-  </data>
-  <data name="GLOBAL_SELECT_LOGS_FILE_TYPE_GUI" xml:space="preserve">
-    <value>Selectionnez le Type de fichier pour les logs !</value>
-  </data>
-  <data name="STATS_COUNT_LOGS" xml:space="preserve">
-    <value>Nombre de Logs</value>
-  </data>
-  <data name="STATS_COUNT_SAVES" xml:space="preserve">
-    <value>Nombre de Sauvegardes</value>
-  </data>
-  <data name="STATS_GLOBAL_MESSAGES" xml:space="preserve">
-    <value>Statistique Globales</value>
-  </data>
-  <data name="GLOBAL_SELECT_MAX_FILE_SIZE_GUI" xml:space="preserve">
-    <value>Selectionnez la taille maximale de transfert simultanée (ko)</value>
   </data>
 </root>
