correction language.fr-FR.resx

--- a/MainApplication/Localization/Language.fr-FR.resx
+++ b/MainApplication/Localization/Language.fr-FR.resx
@@ -151,10 +151,10 @@
     <value>Destination</value>
   </data>
   <data name="GLOBAL_WELCOME" xml:space="preserve">
-    <value>Bienvenue dans EasySave</value>
+    <value>Bienvenue dans EasySave !</value>
   </data>
   <data name="CHOICE_DISPLAY" xml:space="preserve">
-    <value>Liste des Actions Possibles :</value>
+    <value>Liste des Actions Possible :</value>
   </data>
   <data name="CHOICE_DESC_SHOW_LIST" xml:space="preserve">
     <value>Afficher la liste des sauvegardes</value>
@@ -186,6 +186,9 @@
   <data name="CREATE_SAVE_ASK_NAME_RETRY" xml:space="preserve">
     <value>Une sauvegarde comporte déjà ce nom.</value>
   </data>
+  <data name="GLOBAL_SAVE_ALREADY_RUN" xml:space="preserve">
+    <value>La Save est déjà lancée !</value>
+  </data>
   <data name="CREATE_SAVE_ASK_SOURCE_URI" xml:space="preserve">
     <value>Donnez le chemin d'accès à la sauvegarde ou "cancel" pour annuler :</value>
   </data>
@@ -209,5 +212,17 @@
   </data>
   <data name="GLOBAL_ASK_GO_TO_MENU" xml:space="preserve">
     <value>Écrivez ou appuyez sur entrée pour revenir au menu.</value>
+  </data>
+  <data name="GLOBAL_CANNOT_REMOVE_RUNNING_SAVE" xml:space="preserve">
+    <value>Vous ne pouvez pas supprimer une sauvegarde lancée !</value>
+  </data>
+  <data name="GLOBAL_DONE" xml:space="preserve">
+    <value>Fait.</value>
+  </data>
+  <data name="GLOBAL_PERFORMING_SAVE" xml:space="preserve">
+    <value>Sauvegarde en cours...</value>
+  </data>
+  <data name="CREATE_SAVE_REACH_LIMIT" xml:space="preserve">
+    <value>La limite de 5 sauvegardes est dépassée.</value>
   </data>
 </root>
