--- a/MainApplication/Localization/Language.fr-FR.resx
+++ b/MainApplication/Localization/Language.fr-FR.resx
@@ -1,136 +1,228 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-
 <root>
-    <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
-        <xsd:element name="root" msdata:IsDataSet="true">
-            
-        </xsd:element>
-    </xsd:schema>
-    <resheader name="resmimetype">
-        <value>text/microsoft-resx</value>
-    </resheader>
-    <resheader name="version">
-        <value>1.3</value>
-    </resheader>
-    <resheader name="reader">
-        <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-    </resheader>
-    <resheader name="writer">
-        <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-    </resheader>
-    <data name="GLOBAL_SELECT_LANGUAGE" xml:space="preserve">
-        <value>Selectionnez un Langage (en-US, fr-FR) :</value>
-    </data>
-    <data name="GLOBAL_SELECTED_LANGUAGE" xml:space="preserve">
-        <value>La langue choisie est : fr-FR</value>
-    </data>
-    <data name="GLOBAL_NAME" xml:space="preserve">
-        <value>Nom</value>
-    </data>
-    <data name="GLOBAL_ASK_SAVE_NAME" xml:space="preserve">
-        <value>Entrer le nom d'une Sauvegarde ou "cancel" pour annuler :</value>
-    </data>
-    <data name="GLOBAL_ASK_SAVE_NAME_OR_ALL" xml:space="preserve">
-        <value>Entrer le nom d'une Sauvegarde ou "all" pour lancer toutes les sauvegardes ou "cancel" pour annuler :</value>
-    </data>
-    <data name="GLOBAL_SAVE_NAME_NOT_EXIST" xml:space="preserve">
-        <value>Aucune sauvegarde n'existe avec ce nom !</value>
-    </data>
-    <data name="GLOBAL_SELECT_CHOICE" xml:space="preserve">
-        <value>Votre choix :</value>
-    </data>
-    <data name="GLOBAL_SELECT_CHOICE_RETRY" xml:space="preserve">
-        <value>Choix incorrect. Votre choix :</value>
-    </data>
-    <data name="GLOBAL_SOURCE" xml:space="preserve">
-        <value>Source</value>
-    </data>
-    <data name="GLOBAL_STATE" xml:space="preserve">
-        <value>État</value>
-    </data>
-    <data name="GLOBAL_TARGET" xml:space="preserve">
-        <value>Destination</value>
-    </data>
-    <data name="GLOBAL_WELCOME" xml:space="preserve">
-        <value>Bienvenue dans EasySave !</value>
-    </data>
-    <data name="CHOICE_DISPLAY" xml:space="preserve">
-        <value>Liste des Actions Possible :</value>
-    </data>
+  <!-- 
+    Microsoft ResX Schema 
     
-    <data name="CHOICE_DESC_SHOW_LIST" xml:space="preserve">
-        <value>Afficher la liste des sauvegardes</value>
+    Version 2.0
+    
+    The primary goals of this format is to allow a simple XML format 
+    that is mostly human readable. The generation and parsing of the 
+    various data types are done through the TypeConverter classes 
+    associated with the data types.
+    
+    Example:
+    
+    ... ado.net/XML headers & schema ...
+    <resheader name="resmimetype">text/microsoft-resx</resheader>
+    <resheader name="version">2.0</resheader>
+    <resheader name="reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
+    <resheader name="writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
+    <data name="Name1"><value>this is my long string</value><comment>this is a comment</comment></data>
+    <data name="Color1" type="System.Drawing.Color, System.Drawing">Blue</data>
+    <data name="Bitmap1" mimetype="application/x-microsoft.net.object.binary.base64">
+        <value>[base64 mime encoded serialized .NET Framework object]</value>
     </data>
-    <data name="CHOICE_DESC_CREATE" xml:space="preserve">
-        <value>Ajouter une sauvegarde</value>
+    <data name="Icon1" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+        <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
+        <comment>This is a comment</comment>
     </data>
-    <data name="CHOICE_DESC_REMOVE" xml:space="preserve">
-        <value>Supprimer une sauvegarde</value>
-    </data>
-    <data name="CHOICE_DESC_START" xml:space="preserve">
-        <value>Lancer une ou plusieurs sauvegarde(s)</value>
-    </data>
-    <data name="CHOICE_DESC_STOP" xml:space="preserve">
-        <value>Arrêter une ou plusieurs sauvegarde(s)</value>
-    </data>
-    <data name="CHOICE_DESC_END" xml:space="preserve">
-        <value>Stopper l'application</value>
-    </data>
+                
+    There are any number of "resheader" rows that contain simple 
+    name/value pairs.
+    
+    Each data row contains a name, and value. The row also contains a 
+    type or mimetype. Type corresponds to a .NET class that support 
+    text/value conversion through the TypeConverter architecture. 
+    Classes that don't support this are serialized and stored with the 
+    mimetype set.
+    
+    The mimetype is used for serialized objects, and tells the 
+    ResXResourceReader how to depersist the object. This is currently not 
+    extensible. For a given mimetype the value must be set accordingly:
+    
+    Note - application/x-microsoft.net.object.binary.base64 is the format 
+    that the ResXResourceWriter will generate, however the reader can 
+    read any of the formats listed below.
+    
+    mimetype: application/x-microsoft.net.object.binary.base64
+    value   : The object must be serialized with 
+            : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
+            : and then encoded with base64 encoding.
+    
+    mimetype: application/x-microsoft.net.object.soap.base64
+    value   : The object must be serialized with 
+            : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
+            : and then encoded with base64 encoding.
 
-    <data name="CREATE_SAVE_SUCCESS" xml:space="preserve">
-        <value>Votre sauvegarde a été créée avec succès !</value>
-    </data>
-    <data name="CREATE_SAVE_ERROR" xml:space="preserve">
-        <value>Une erreur est survenue pendant la création de votre sauvegarde !</value>
-    </data>
-
-    <data name="CREATE_SAVE_ASK_NAME" xml:space="preserve">
-        <value>Donner un nom à la sauvegarde ou "cancel" pour annuler :</value>
-    </data>
-    <data name="CREATE_SAVE_ASK_NAME_RETRY" xml:space="preserve">
-        <value>Une sauvegarde comporte déjà ce nom.</value>
-    </data>
-
-    <data name="GLOBAL_SAVE_ALREADY_RUN" xml:space="preserve">
-        <value>La Save est déjà lancée !</value>
-    </data>
-
-    <data name="CREATE_SAVE_ASK_SOURCE_URI" xml:space="preserve">
-        <value>Donner le chemin d'accès à la sauvegarde ou "cancel" pour annuler :</value>
-    </data>
-    <data name="CREATE_SAVE_ASK_SOURCE_URI_RETRY" xml:space="preserve">
-        <value>Le chemin d'accès est incorrect.</value>
-    </data>
-
-    <data name="CREATE_SAVE_ASK_TARGET_URI" xml:space="preserve">
-        <value>Donner le chemin d'écriture de la sauvegarde ou "cancel" pour annuler :</value>
-    </data>
-    <data name="CREATE_SAVE_ASK_TARGET_URI_RETRY" xml:space="preserve">
-        <value>Le chemin est incorrect.</value>
-    </data>
-
-    <data name="CREATE_SAVE_ASK_TYPE" xml:space="preserve">
-        <value>Donner type de sauvegarde ( 1 - Complète | 2 - Differentielle ) ou "cancel" pour annuler :</value>
-    </data>
-    <data name="CREATE_SAVE_ASK_TYPE_RETRY" xml:space="preserve">
-        <value>Ce type de sauvegarde n'existe pas.</value>
-    </data>
-    <data name="GLOBAL_TYPE" xml:space="preserve">
-        <value>Type</value>
-    </data>
-    <data name="GLOBAL_ASK_GO_TO_MENU" xml:space="preserve">
-        <value>Écrivez ou appuyez sur entré pour revenir au menu.</value>
-    </data>
-    <data name="GLOBAL_CANNOT_REMOVE_RUNNING_SAVE" xml:space="preserve">
-        <value>Vous ne pouvez pas supprimer une sauvegarde lancée !</value>
-    </data>
-    <data name="GLOBAL_DONE" xml:space="preserve">
-        <value>Fait.</value>
-    </data>
-    <data name="GLOBAL_PERFORMING_SAVE" xml:space="preserve">
-        <value>Sauvegarde en cours...</value>
-    </data>
-    <data name="CREATE_SAVE_REACH_LIMIT" xml:space="preserve">
-        <value>La limite de 5 sauvegardes est dépassé.</value>
-    </data>
+    mimetype: application/x-microsoft.net.object.bytearray.base64
+    value   : The object must be serialized into a byte array 
+            : using a System.ComponentModel.TypeConverter
+            : and then encoded with base64 encoding.
+    -->
+  <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
+    <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
+    <xsd:element name="root" msdata:IsDataSet="true">
+      <xsd:complexType>
+        <xsd:choice maxOccurs="unbounded">
+          <xsd:element name="metadata">
+            <xsd:complexType>
+              <xsd:sequence>
+                <xsd:element name="value" type="xsd:string" minOccurs="0" />
+              </xsd:sequence>
+              <xsd:attribute name="name" use="required" type="xsd:string" />
+              <xsd:attribute name="type" type="xsd:string" />
+              <xsd:attribute name="mimetype" type="xsd:string" />
+              <xsd:attribute ref="xml:space" />
+            </xsd:complexType>
+          </xsd:element>
+          <xsd:element name="assembly">
+            <xsd:complexType>
+              <xsd:attribute name="alias" type="xsd:string" />
+              <xsd:attribute name="name" type="xsd:string" />
+            </xsd:complexType>
+          </xsd:element>
+          <xsd:element name="data">
+            <xsd:complexType>
+              <xsd:sequence>
+                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
+                <xsd:element name="comment" type="xsd:string" minOccurs="0" msdata:Ordinal="2" />
+              </xsd:sequence>
+              <xsd:attribute name="name" type="xsd:string" use="required" msdata:Ordinal="1" />
+              <xsd:attribute name="type" type="xsd:string" msdata:Ordinal="3" />
+              <xsd:attribute name="mimetype" type="xsd:string" msdata:Ordinal="4" />
+              <xsd:attribute ref="xml:space" />
+            </xsd:complexType>
+          </xsd:element>
+          <xsd:element name="resheader">
+            <xsd:complexType>
+              <xsd:sequence>
+                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
+              </xsd:sequence>
+              <xsd:attribute name="name" type="xsd:string" use="required" />
+            </xsd:complexType>
+          </xsd:element>
+        </xsd:choice>
+      </xsd:complexType>
+    </xsd:element>
+  </xsd:schema>
+  <resheader name="resmimetype">
+    <value>text/microsoft-resx</value>
+  </resheader>
+  <resheader name="version">
+    <value>2.0</value>
+  </resheader>
+  <resheader name="reader">
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </resheader>
+  <resheader name="writer">
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </resheader>
+  <data name="GLOBAL_SELECT_LANGUAGE" xml:space="preserve">
+    <value>Selectionnez un Langage (en-US, fr-FR) :</value>
+  </data>
+  <data name="GLOBAL_SELECTED_LANGUAGE" xml:space="preserve">
+    <value>La langue choisie est : fr-FR</value>
+  </data>
+  <data name="GLOBAL_NAME" xml:space="preserve">
+    <value>Nom</value>
+  </data>
+  <data name="GLOBAL_ASK_SAVE_NAME" xml:space="preserve">
+    <value>Entrez le nom d'une Sauvegarde ou "cancel" pour annuler :</value>
+  </data>
+  <data name="GLOBAL_ASK_SAVE_NAME_OR_ALL" xml:space="preserve">
+    <value>Entrez le nom d'une Sauvegarde ou "all" pour lancer toutes les sauvegardes ou "cancel" pour annuler :</value>
+  </data>
+  <data name="GLOBAL_SAVE_NAME_NOT_EXIST" xml:space="preserve">
+    <value>Aucune sauvegarde n'existe avec ce nom !</value>
+  </data>
+  <data name="GLOBAL_SELECT_CHOICE" xml:space="preserve">
+    <value>Votre choix :</value>
+  </data>
+  <data name="GLOBAL_SELECT_CHOICE_RETRY" xml:space="preserve">
+    <value>Choix incorrect. Votre choix :</value>
+  </data>
+  <data name="GLOBAL_SOURCE" xml:space="preserve">
+    <value>Source</value>
+  </data>
+  <data name="GLOBAL_STATE" xml:space="preserve">
+    <value>État</value>
+  </data>
+  <data name="GLOBAL_TARGET" xml:space="preserve">
+    <value>Destination</value>
+  </data>
+  <data name="GLOBAL_WELCOME" xml:space="preserve">
+    <value>Bienvenue dans EasySave !</value>
+  </data>
+  <data name="CHOICE_DISPLAY" xml:space="preserve">
+    <value>Liste des Actions Possible :</value>
+  </data>
+  <data name="CHOICE_DESC_SHOW_LIST" xml:space="preserve">
+    <value>Afficher la liste des sauvegardes</value>
+  </data>
+  <data name="CHOICE_DESC_CREATE" xml:space="preserve">
+    <value>Ajouter une sauvegarde</value>
+  </data>
+  <data name="CHOICE_DESC_REMOVE" xml:space="preserve">
+    <value>Supprimer une sauvegarde</value>
+  </data>
+  <data name="CHOICE_DESC_START" xml:space="preserve">
+    <value>Lancer une ou plusieurs sauvegarde(s)</value>
+  </data>
+  <data name="CHOICE_DESC_STOP" xml:space="preserve">
+    <value>Arrêter une ou plusieurs sauvegarde(s)</value>
+  </data>
+  <data name="CHOICE_DESC_END" xml:space="preserve">
+    <value>Stopper l'application</value>
+  </data>
+  <data name="CREATE_SAVE_SUCCESS" xml:space="preserve">
+    <value>Votre sauvegarde a été créée avec succès !</value>
+  </data>
+  <data name="CREATE_SAVE_ERROR" xml:space="preserve">
+    <value>Une erreur est survenue pendant la création de votre sauvegarde !</value>
+  </data>
+  <data name="CREATE_SAVE_ASK_NAME" xml:space="preserve">
+    <value>Donnez un nom à la sauvegarde ou "cancel" pour annuler :</value>
+  </data>
+  <data name="CREATE_SAVE_ASK_NAME_RETRY" xml:space="preserve">
+    <value>Une sauvegarde comporte déjà ce nom.</value>
+  </data>
+  <data name="GLOBAL_SAVE_ALREADY_RUN" xml:space="preserve">
+    <value>La Save est déjà lancée !</value>
+  </data>
+  <data name="CREATE_SAVE_ASK_SOURCE_URI" xml:space="preserve">
+    <value>Donnez le chemin d'accès à la sauvegarde ou "cancel" pour annuler :</value>
+  </data>
+  <data name="CREATE_SAVE_ASK_SOURCE_URI_RETRY" xml:space="preserve">
+    <value>Le chemin d'accès est incorrect.</value>
+  </data>
+  <data name="CREATE_SAVE_ASK_TARGET_URI" xml:space="preserve">
+    <value>Donnez le chemin d'écriture de la sauvegarde ou "cancel" pour annuler :</value>
+  </data>
+  <data name="CREATE_SAVE_ASK_TARGET_URI_RETRY" xml:space="preserve">
+    <value>Le chemin est incorrect.</value>
+  </data>
+  <data name="CREATE_SAVE_ASK_TYPE" xml:space="preserve">
+    <value>Donnez type de sauvegarde ( 1 - Complète | 2 - Differentielle ) ou "cancel" pour annuler :</value>
+  </data>
+  <data name="CREATE_SAVE_ASK_TYPE_RETRY" xml:space="preserve">
+    <value>Ce type de sauvegarde n'existe pas.</value>
+  </data>
+  <data name="GLOBAL_TYPE" xml:space="preserve">
+    <value>Type</value>
+  </data>
+  <data name="GLOBAL_ASK_GO_TO_MENU" xml:space="preserve">
+    <value>Écrivez ou appuyez sur entrée pour revenir au menu.</value>
+  </data>
+  <data name="GLOBAL_CANNOT_REMOVE_RUNNING_SAVE" xml:space="preserve">
+    <value>Vous ne pouvez pas supprimer une sauvegarde lancée !</value>
+  </data>
+  <data name="GLOBAL_DONE" xml:space="preserve">
+    <value>Fait.</value>
+  </data>
+  <data name="GLOBAL_PERFORMING_SAVE" xml:space="preserve">
+    <value>Sauvegarde en cours...</value>
+  </data>
+  <data name="CREATE_SAVE_REACH_LIMIT" xml:space="preserve">
+    <value>La limite de 5 sauvegardes est dépassée.</value>
+  </data>
 </root>
