feat. add config file

--- a/MainApplication/Localization/Language.fr-FR.resx
+++ b/MainApplication/Localization/Language.fr-FR.resx
@@ -267,4 +267,7 @@
   <data name="PAGE_SAVES_TITLE" xml:space="preserve">
     <value>Gestionnaire de Sauvegardes</value>
   </data>
+  <data name="GLOBAL_SELECT_SAVE_FILE_TYPE_GUI" xml:space="preserve">
+    <value>Selectionnez une méthode de Sauvegarde !</value>
+  </data>
 </root>
